--- a/basic dom/index.html
+++ b/basic dom/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>welcome To My Dom Journey</h1>
     </header>
-    <main>
+    <main class="container-main">
         <h1>Welcome to First</h1>
         <ul>
             <li>One</li>
@@ -38,14 +38,8 @@
 
     </footer>
     <script src="dom.js"></script>
-    <script>
-        const second=document.getElementById('Second');
-        console.log(second);
-        
-        const thirds=document.getElementsByClassName('Third');
-        for(const third of thirds){
-            console.log('third');
-        }
+//document.querySelector('.container-main li')
+//document.querySelectorAll('.container-main li')
     </script>
 </body>
 </html>
