*** Dom 5 Keyword use ***

--- a/basic dom/index.html
+++ b/basic dom/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    /*
+    1. getElementsByTagname();
+    2. getElementByID();
+    3. getElementsByClass();
+    4. QuerySelector();
+    5. QuerySelectorAll();
+    */
     <header>
         <h1>welcome To My Dom Journey</h1>
     </header>
@@ -38,8 +45,7 @@
 
     </footer>
     <script src="dom.js"></script>
-//document.querySelector('.container-main li')
-//document.querySelectorAll('.container-main li')
+
     </script>
 </body>
 </html>
