*** Dom CreateElement appendChild() ***

--- a/basic dom/index.html
+++ b/basic dom/index.html
@@ -36,10 +36,10 @@
         </section>
 <section id="place-container">
     <h1 class="Third">Welcome to Third</h1>
-    <ul>
-        <li>Eight</li>
-        <li>Nine</li>
-        <li>Ten</li>
+    <ul id="place-list">
+        <li>Dhaka</li>
+        <li>Rajshi</li>
+        <li>Kulna</li>
        
     </ul>
 </section>
@@ -48,6 +48,7 @@
 
     </footer>
     <script src="dom.js"></script>
+    <script src="append.js"></script>
 
     </script>
 </body>
