*** Dom add section appendChild() ***

--- a/basic dom/index.html
+++ b/basic dom/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>welcome To My Dom Journey</h1>
     </header>
-    <main class="container-main one two three">
+    <main id="main-content" class="container-main one two three">
  <section>
     <h1>Welcome to First</h1>
     <ul>
