*** Dom EventHnadler onclick() ***

--- a/eventHandler_Dom/index.html
+++ b/eventHandler_Dom/index.html
@@ -11,7 +11,11 @@
 
     </header>
     <main>
-
+<section>
+    <h1>Dom and Events works useCase here</h1>
+    <button onclick="console.log(5915)">Click Me</button>
+    <button onclick="console.log(3.44)">Next</button>
+</section>
     </main>
     <footer>
 
