*** Event onclick() with function ***

--- a/eventHandler_Dom/index.html
+++ b/eventHandler_Dom/index.html
@@ -13,8 +13,8 @@
     <main>
 <section>
     <h1>Dom and Events works useCase here</h1>
-    <button onclick="console.log(5915)">Click Me</button>
-    <button onclick="console.log(3.44)">Next</button>
+    <button onclick="document.body.style.backgroundColor='yellow'">Yellow</button>
+    <button onclick="makered()">Red</button>
 </section>
     </main>
     <footer>
