*** Event onclick() with getElemntById FN ***

--- a/eventHandler_Dom/index.html
+++ b/eventHandler_Dom/index.html
@@ -15,6 +15,7 @@
     <h1>Dom and Events works useCase here</h1>
     <button onclick="document.body.style.backgroundColor='yellow'">Yellow</button>
     <button onclick="makered()">Red</button>
+    <button id="purple">purple</button>
 </section>
     </main>
     <footer>
