--- a/eventHandler_Dom/index.html
+++ b/eventHandler_Dom/index.html
@@ -16,6 +16,7 @@
     <button onclick="document.body.style.backgroundColor='yellow'">Yellow</button>
     <button onclick="makered()">Red</button>
     <button id="purple">purple</button>
+    <button id="pink">Pink</button>
 </section>
     </main>
     <footer>
