*** Event addEventListner ()Fn ***

--- a/eventHandler_Dom/index.html
+++ b/eventHandler_Dom/index.html
@@ -17,6 +17,7 @@
     <button onclick="makered()">Red</button>
     <button id="purple">purple</button>
     <button id="pink">Pink</button>
+    <button id="green">green</button>
 </section>
     </main>
     <footer>
