*** Event addEventListner () final use  ***

--- a/eventHandler_Dom/index.html
+++ b/eventHandler_Dom/index.html
@@ -17,7 +17,8 @@
     <button onclick="makered()">Red</button>
     <button id="purple">purple</button>
     <button id="pink">Pink</button>
-    <button id="green">green</button>
+    <button id="green">green</button>  
+    <button id="blue">blue</button>  
 </section>
     </main>
     <footer>
