*** Event mouseenter & mousemove  ***

--- a/eventHandler_Dom/js/displaycomment.html
+++ b/eventHandler_Dom/js/displaycomment.html
@@ -6,8 +6,9 @@
     <title>addEventListner</title>
 </head>
 <body>
-    <h1>This Blog Post one</h1>
-    <div id="comment-container">
+   
+    <div >
+        <h1 id="comment-container">This Blog Post one</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quia itaque reprehenderit, obcaecati et minima culpa corrupti, quod quisquam perferendis autem odit ab molestiae exercitationem laudantium est in, deleniti optio animi rerum? Iusto corporis accusamus tempora consequatur molestiae consectetur cum sapiente provident error sit magnam sed inventore, qui dolorum quaerat debitis esse voluptates ex enim omnis deleniti natus facere beatae. Provident ullam rerum maxime eaque autem quas iste numquam exercitationem quo laudantium aspernatur quia deserunt dicta sequi, est fugit quae eius sunt odit accusamus eveniet iusto recusandae. Alias, quo quidem!</p>
     </div>
     <h1>This Blog Post two</h1>
