--- a/eventHandler_Dom/js/mouseevent.html
+++ b/eventHandler_Dom/js/mouseevent.html
@@ -17,7 +17,7 @@
      
 
         document.getElementById('text-f').addEventListener('focus',function(){
-            console.log("focus implements");
+            console.log("focus implements done");
         });
     </script>
 </body>
